--- a/content/users-chat.html
+++ b/content/users-chat.html
@@ -145,42 +145,41 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
 const socket = io();
-
-// fetch("/api/users")
-//     .then(response => response.json())
-//     .then(users => {
-//     if (users.length > 0) {
-//         document.querySelector("h1").textContent = users[0].username;
-//     } else {
-//         document.querySelector("h1").textContent = "Guest";
-//     }
-//     })
-//     .catch(error => console.error("Error fetching user data:", error));
+document.addEventListener("DOMContentLoaded", () => {
+    fetch('/chatNow.json')
+        .then(response => response.json())
+        .then(data => {
+            const chatNow = data.chatNow;
+            const mainName = data.username;
+            // Используйте chatNow по необходимости
+            // Например, можно вывести в консоль:
+            console.log('chatNow:', chatNow[0], 'Main Name:', mainName);
+            socket.emit("set chat", (chatNow[0], mainName));
+        })
+        .catch(error => console.error('Ошибка загрузки chatNow:', error));
     
-const params = new URLSearchParams(window.location.search);
-const roomName = params.get("room");
-console.log("Вы зашли в комнату:", roomName);
-
-// Подключаемся к комнате
-socket.emit("joinRoom", roomName);
-
+            
+});
+socket.emit("set chat",(chatNow,mainName)=>{
+    console.log("Chat set:", chatNow, mainName);
+    socket.emit("set chat", chatNow, mainName);
+});
 // Получение и отображение сообщений
 socket.on("add mess", (data) => {
   const div = document.createElement("div");
-  console.log(data.name)
   div.textContent = ` : ${data.msg}`;
   document.getElementById("chat-content").appendChild(div);
   window.scrollTo(0,document.body.scrollHeight);
 });
-
-// Отправка сообщения
 document.getElementById("messageForm").addEventListener("submit", (e) => {
-  e.preventDefault();
-  const msg = document.getElementById("messageText").value.trim();
-  if (!msg) return;
-  socket.emit("add message", (msg));
-  document.getElementById("messageText").value = "";
+    e.preventDefault();
+    const msg = document.getElementById("messageText").value.trim();
+    if (!msg) return;
+    socket.emit("send message", (msg));
+    document.getElementById("messageText").value = "";
 });
+// Отправка сообщения
+
 </script>
 
 </body>
