--- a/content/home.html
+++ b/content/home.html
@@ -13,6 +13,7 @@
     <div class="max-w-7xl mx-auto px-4 py-3" id="searchForm">
       <div class="relative">
         <h1 style="font-size: 1.5em;">MultiChat</h1>
+        <a href="join_mafia">Join Mafia</a>
       </div>
       <div id="searchResult"></div>
     </div>
@@ -99,23 +100,36 @@
   socket.on("roomsList", (rooms) => {
     const container = document.getElementById("recomendations");
     container.innerHTML = "";
+
     rooms.forEach(room => {
+      if (!room || !room.room_name) return; // <-- защита от null
+
       const div = document.createElement("div");
       div.className = "w-full p-6 bg-white rounded-lg shadow mb-6 w-full max-w-3xl";
       div.style.width = "95%"; 
       div.style.minWidth = "320px"; 
       div.innerHTML = `
         <h2 style="width:80%;" class="text-lg font-semibold text-gray-800">${room.room_name}</h2>
-        <p class="text-gray-600">${room.description}</p>
+        <p class="text-gray-600">${room.description || ""}</p>
         <button class="mt-2 px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600"
           onclick="window.location.href='/main?room=${encodeURIComponent(room.room_name)}'">
           Join Room
         </button>
-        <button onclick="${socket.emit("add to main room",(room.room_name))}" class="bg-blue-500 text-white">Save</button>
+        <button class="save-room bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">Save</button>
       `;
+
+      // навешиваем обработчик на кнопку Save
+      div.querySelector(".save-room").onclick = () => {
+        console.log("click")
+        socket.emit("add to main room", { data: room.room_name });
+      };
+
       container.appendChild(div);
     });
   });
+socket.on("main room error",(data)=>{
+  alert(data);
+})
 
   
 </script>
