--- a/content/user-profile.html
+++ b/content/user-profile.html
@@ -56,26 +56,13 @@
     window.location.href="/";
   })
   function toChat(friend){
-    socket.emit("get user name");
-    socket.on("set username",(username)=>{
-      const name = username;
-      console.log(`Friends include ${username}`)
-      const chat = []
-      chat.push(friend,name)
-      console.log(`Friends: ${chat}`);
-      console.log("Переход к чату с:", friend);
-      console.log("Переход к чату с:", name);
-      socket.emit("get friend",(friend));
-      
-    });
-    socket.emit("get hash",{friend:friend, mainName:name});
-
+    socket.emit("get hash",friend);
+    socket.on("set hash",(hash)=>{
+      console.log(hash);    
+      window.location.href = `/your?room=${encodeURIComponent(hash)}`;          
+  })
     
   }
-  socket.on("set hash",(hash)=>{
-    console.log(hash);    
-    window.location.href = `/users-chat?name=${encodeURIComponent(hash)}`;    
-  })
 });
 
 socket.on("rooms", (rooms) => {
@@ -106,8 +93,9 @@ socket.on("room delete error",(err)=>{
   alert(err);
 })
 function toRoomChat(roomName){
-  window.location.href='/main?room=${encodeURIComponent(room)}';
+  window.location.href = `/room-chat?room=${encodeURIComponent(roomName)}`;
 }
+
 
 </script>
 
@@ -145,7 +133,9 @@ function toRoomChat(roomName){
   <div class="container mx-auto p-4 sm:p-6 lg:p-8 max-w-5xl">
     <!-- Profile Header -->
     <div class="bg-white rounded-2xl shadow-xl p-6 mb-6 text-center sm:text-left">
-      <a href="/chat">Home</a>
+      <a href="/chat" class="inline-block px-5 py-2 rounded-lg bg-indigo-500 text-white font-semibold shadow hover:bg-indigo-600 transition mb-4 sm:mb-0 text-center">
+        Home
+      </a>
       <h1 style="text-align: center;" id="user-name" class="text-2xl sm:text-3xl font-bold">User</h1>
     </div>
 
