--- a/content/user-enter.html
+++ b/content/user-enter.html
@@ -19,6 +19,7 @@
         <input id="user-password" type="text" placeholder="Password" required />
         <input type="submit" value="Login" />
       </form>
+      <a href="forgot-password">Forgot password?</a>
     </div>
   </div>
 
