--- a/content/chat.html
+++ b/content/chat.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script src="https://cdn.tailwindcss.com"></script>
     <style>
         #chat {
     display: flex;
@@ -133,7 +134,10 @@
 }
     </style>
 </head>
-<body>
+<body bgcolor="#23B87F">
+    <a href="/us_profile" class="inline-block px-5 py-2 rounded-lg bg-indigo-500 text-white font-semibold shadow hover:bg-indigo-600 transition mb-4 sm:mb-0 text-center">
+        To profile
+    </a>
     <div id="chat">
         <div id="chat-content"></div>
         <form id="messageForm">
@@ -146,41 +150,145 @@
     <script>
 const socket = io();
 
-// fetch("/api/users")
-//     .then(response => response.json())
-//     .then(users => {
-//     if (users.length > 0) {
-//         document.querySelector("h1").textContent = users[0].username;
-//     } else {
-//         document.querySelector("h1").textContent = "Guest";
-//     }
-//     })
-//     .catch(error => console.error("Error fetching user data:", error));
-    
-const params = new URLSearchParams(window.location.search);
-const roomName = params.get("room");
-console.log("Вы зашли в комнату:", roomName);
+fetch('/api/users')
+.then(response => response.json())
+.then(data => {
+    const currentUser = data[data.length - 1];  
 
-// Подключаемся к комнате
-socket.emit("joinRoom", roomName);
+    // Берем имя друга напрямую (строка)
+    const roomNow = typeof currentUser.roomNow === "string"
+        ? currentUser.roomNow
+        : "";
+    const mainName = typeof currentUser.mainName === "string"
+        ? currentUser.mainName
+        : "";
+    const chatNow = typeof currentUser.chatNow === "string"
+        ? currentUser.chatNow
+        : "";
+    console.log(roomNow);
+    socket.emit("join chat", {mainName:roomNow, chatNow:roomNow });
 
-// Получение и отображение сообщений
-socket.on("add mess", (data) => {
-  const div = document.createElement("div");
-  console.log(data.name)
-  div.textContent = ` : ${data.msg}`;
-  document.getElementById("chat-content").appendChild(div);
-  window.scrollTo(0,document.body.scrollHeight);
+    document.getElementById("messageForm").addEventListener("submit", (e) => {
+        e.preventDefault();
+        const msg = document.getElementById("messageText").value.trim();
+        if (!msg || !chatNow || mainName === "Unknown") return;
+
+        socket.emit("set chat", { chatNow:roomNow, mainName:roomNow, msg });
+        document.getElementById("messageText").value = "";
+    });
+})
+.catch(error => console.error("Ошибка загрузки chatNow:", error));
+
+socket.on("no friend", () => {
+    alert("No friend selected for chat.");
+    window.location.href = "/";
 });
+let chatNow = null;
+let mainName = null;
+socket.on("chat set", (data) => {
+    if (data.chatNow) {
+        chatNow = data.chatNow;
+    }
+    const chatContent = document.getElementById("chat-content");
+    chatContent.innerHTML = "";
+
+    if (data.messages && Array.isArray(data.messages)) {
+        data.messages.forEach((msg, index) => {
+            const name = msg.username || msg.sender || "Unknown";
+            const text = msg.text || "";
+
+            if (name === "Unknown") return;
+
+            const div = document.createElement("div");
+            div.innerHTML = `<p><strong>${name}</strong>: <span id="msgText-${index}">${escapeHtml(text)}</span></p>`;
+            div.style = "font-size:1.5em; color:#2F5C4B;";
+            // Создаем контейнер для кнопок, скрытый по умолчанию
+            const btnContainer = document.createElement("div");
+            btnContainer.style.display = "none";
+            btnContainer.style.marginTop = "5px";
+
+            const deleteBtn = document.createElement("button");
+            deleteBtn.textContent = "Delete";
+            deleteBtn.addEventListener("click", () => {
+                socket.emit("delete message", { id: msg.id, chatNow, mainName });
+                btnContainer.style.display = "none";
+            });
+
+            const editBtn = document.createElement("button");
+            editBtn.textContent = "Change";
+            editBtn.addEventListener("click", () => {
+                const msgSpan = div.querySelector(`#msgText-${index}`);
+                const input = document.createElement("input");
+                input.type = "text";
+                input.value = text;
+                msgSpan.replaceWith(input);
+                input.focus();
+
+                input.addEventListener("blur", () => {
+                    const newText = input.value.trim();
+                    if (newText && newText !== text) {
+                        socket.emit("edit message", { id: msg.id, chatNow, mainName, text: newText });
+                    }
+                    input.replaceWith(msgSpan);
+                    btnContainer.style.display = "none";
+                });
+            });
+            const complainBtn = document.createElement("button");
+            complainBtn.textContent = "Complain";
+            btnContainer.appendChild(deleteBtn);
+            btnContainer.appendChild(editBtn);
+            btnContainer.appendChild(complainBtn);
+            div.appendChild(btnContainer);
+
+            // Показ кнопок по правому клику мыши
+            div.addEventListener("contextmenu", (e) => {
+                e.preventDefault();
+                btnContainer.style.display = "block";
+            });
+
+            // Показ кнопок по долгому тапу (touch)
+            let touchTimer = null;
+            div.addEventListener("touchstart", (e) => {
+                touchTimer = setTimeout(() => {
+                    btnContainer.style.display = "block";
+                }, 500); // 500мс для долгого нажатия
+            });
+            div.addEventListener("touchend", (e) => {
+                clearTimeout(touchTimer);
+            });
+
+            // Скрытие кнопок при клике вне сообщения
+            document.addEventListener("click", (e) => {
+                if (!div.contains(e.target)) {
+                    btnContainer.style.display = "none";
+                }
+            });
+
+            chatContent.appendChild(div);
+        });
+    }
+
+    chatContent.scrollTop = chatContent.scrollHeight;
+});
+
+// функция для защиты от XSS
+function escapeHtml(str) {
+  return str
+    .replace(/&/g, "&amp;")
+    .replace(/</g, "&lt;")
+    .replace(/>/g, "&gt;")
+    .replace(/"/g, "&quot;")
+    .replace(/'/g, "&#039;");
+}
+
+
+
+socket.on("chat error",(data)=>{
+    alert(data);
+})
 
 // Отправка сообщения
-document.getElementById("messageForm").addEventListener("submit", (e) => {
-  e.preventDefault();
-  const msg = document.getElementById("messageText").value.trim();
-  if (!msg) return;
-  socket.emit("add message", (msg));
-  document.getElementById("messageText").value = "";
-});
+
 </script>
 
 </body>
