--- a/content/home.html
+++ b/content/home.html
@@ -12,8 +12,9 @@
   <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-10">
     <div class="max-w-7xl mx-auto px-4 py-3" id="searchForm">
       <div class="relative">
-        <h1 style="font-size: 1.5em;">MultiChat</h1>
+        <h1 style="font-size: 1.5em;user-select: none;">MultiChat</h1>
         <a href="join_mafia">Join Mafia</a>
+        <a href="guess_the_number">Guess the number</a>
       </div>
       <div id="searchResult"></div>
     </div>
@@ -111,13 +112,16 @@
       div.innerHTML = `
         <h2 style="width:80%;" class="text-lg font-semibold text-gray-800">${room.room_name}</h2>
         <p class="text-gray-600">${room.description || ""}</p>
-        <button class="mt-2 px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600"
-          onclick="window.location.href='/main?room=${encodeURIComponent(room.room_name)}'">
+        <button class="join-room mt-2 px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600">
           Join Room
         </button>
         <button class="save-room bg-blue-500 text-white px-3 py-1 rounded hover:bg-blue-600">Save</button>
-      `;
-
+            `;
+            // Join Room button handler
+            div.querySelector(".join-room").onclick = () => {
+        socket.emit("enter room", room.room_name);
+        window.location.href = `/main?room=${encodeURIComponent(room.room_name)}`;
+            };
       // навешиваем обработчик на кнопку Save
       div.querySelector(".save-room").onclick = () => {
         console.log("click")
