--- a/content/user-profile.html
+++ b/content/user-profile.html
@@ -50,60 +50,61 @@
 
 
 
-// socket.on("rooms", (rooms) => {
-//   const roomsContainer = document.querySelector("#rooms-list");
-//   roomsContainer.innerHTML = "";
+socket.on("rooms", (rooms) => {
+  const roomsContainer = document.querySelector("#rooms-list");
+  roomsContainer.innerHTML = "";
   
-//   if (!rooms || rooms.length === 0) {
-//     roomsContainer.innerHTML = `<p class="text-gray-500">No rooms yet</p>`;
-//     return;
-//   }
+  if (!rooms || rooms.length === 0) {
+    roomsContainer.innerHTML = `<p class="text-gray-500">No rooms yet</p>`;
+    return;
+  }
   
-//   rooms.forEach(room => {
+  rooms.forEach(room => {
 
-//     const roomCard = document.createElement("div");
-//     roomCard.className =
-//       "p-4 bg-indigo-100 rounded-lg shadow hover:bg-indigo-200 transition";
-//     roomCard.innerHTML = `
-//       <h3 class="font-semibold">${room}</h3>
-//       <button id="join-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Join</button>
-//       <button id="del-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Delete</button>
-//     `;
-//     socket.on("room deleted", (room)=>{
-//       alert(`${room} delete! Restart the page`)
-//     });
-//     roomsContainer.appendChild(roomCard);
-//     document.getElementById("join-room").onclick = ()=>{window.location.href = `/main?room=${encodeURIComponent(room.room_name)}`;};
-//     document.getElementById("del-room").onclick = ()=>{socket.emit("del room",room)};
-//   });
-// });
-// socket.on("saved rooms", (rooms) => {
-//   const roomsContainer = document.querySelector("#main-rooms-list");
-//   roomsContainer.innerHTML = "";
+    const roomCard = document.createElement("div");
+    roomCard.className =
+      "p-4 bg-indigo-100 rounded-lg shadow hover:bg-indigo-200 transition";
+    roomCard.innerHTML = `
+      <h3 class="font-semibold">${room.room_name}</h3>
+      <p>${room.description}</p>
+      <button id="join-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Join</button>
+      <button id="del-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Delete</button>
+    `;
+    socket.on("room deleted", (room)=>{
+      alert(`${room} delete! Restart the page`)
+    });
+    roomsContainer.appendChild(roomCard);
+    document.getElementById("join-room").onclick = ()=>{window.location.href = `/main?room=${encodeURIComponent(room.room_name)}`;};
+    document.getElementById("del-room").onclick = ()=>{socket.emit("del room",room)};
+  });
+});
+socket.on("saved rooms", (rooms) => {
+  const roomsContainer = document.querySelector("#main-rooms-list");
+  roomsContainer.innerHTML = "";
   
-//   if (!rooms || rooms.length === 0) {
-//     roomsContainer.innerHTML = `<p class="text-gray-500">No rooms yet</p>`;
-//     return;
-//   }
+  if (!rooms || rooms.length === 0) {
+    roomsContainer.innerHTML = `<p class="text-gray-500">No rooms yet</p>`;
+    return;
+  }
   
-//   rooms.forEach(room => {
+  rooms.forEach(room => {
 
-//     const roomCard = document.createElement("div");
-//     roomCard.className =
-//       "p-4 bg-indigo-100 rounded-lg shadow hover:bg-indigo-200 transition";
-//     roomCard.innerHTML = `
-//       <h3 class="font-semibold">${room}</h3>
-//       <button id="join-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Join</button>
-//       <button id="del-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Delete</button>
-//     `;
-//     socket.on("room deleted", (room)=>{
-//       alert(`${room} delete! Restart the page`)
-//     });
-//     roomsContainer.appendChild(roomCard);
-//     document.getElementById("join-room").onclick = ()=>{window.location.href = `/main?room=${encodeURIComponent(room.room_name)}`;};
-//     document.getElementById("del-room").onclick = ()=>{socket.emit("del room",room)};
-//   });
-// });
+    const roomCard = document.createElement("div");
+    roomCard.className =
+      "p-4 bg-indigo-100 rounded-lg shadow hover:bg-indigo-200 transition";
+    roomCard.innerHTML = `
+      <h3 class="font-semibold">${room.room}</h3>
+      <button id="join-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Join</button>
+      <button id="del-room" class="text-red-500 bg-gray-200 px-2 py-1 rounded hover:bg-gray-300" >Delete</button>
+    `;
+    socket.on("room deleted", (room)=>{
+      alert(`${room} delete! Restart the page`)
+    });
+    roomsContainer.appendChild(roomCard);
+    document.getElementById("join-room").onclick = ()=>{window.location.href = `/main?room=${encodeURIComponent(room.room_name)}`;};
+    document.getElementById("del-room").onclick = ()=>{socket.emit("del room",room)};
+  });
+});
 socket.on("room delete error",(err)=>{
   alert(err);
 })
@@ -158,8 +159,8 @@ function toRoomChat(roomName){
     <!-- Tabs Navigation -->
     <div class="flex justify-center sm:justify-start gap-4 mb-6">
       <a href="#settings" class="tab-link px-4 py-2 rounded-lg font-medium text-gray-900">Settings</a>
-      <a href="#main-rooms" class="tab-link px-4 py-2 rounded-lg font-medium text-gray-900">Main rooms</a>
-      <a href="#rooms" class="tab-link px-4 py-2 rounded-lg font-medium text-gray-900">Rooms</a>
+      <a href="#main-rooms" class="tab-link px-4 py-2 rounded-lg font-medium text-gray-900">Saved rooms</a>
+      <a href="#rooms" class="tab-link px-4 py-2 rounded-lg font-medium text-gray-900">Main rooms</a>
     </div>
 
 
