--- a/content/create-room.html
+++ b/content/create-room.html
@@ -143,6 +143,8 @@
         <label class="block text-sm font-medium text-gray-700">Categorie</label>
         <select id="categorie" class="w-full p-2 border rounded">
           <option value="sport">Sport</option>
+          <option value="sport">Entertainment</option>
+
         </select>
       </div>
       <div class="flex justify-end space-x-3">
