--- a/content/users-chat.html
+++ b/content/users-chat.html
@@ -149,6 +149,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script>
 const socket = io();
+alert("If the messages do not appear, refresh the page.");
 
 // Объявляем переменные в глобальной области видимости
 let chatNow = null;
