--- a/content/home.html
+++ b/content/home.html
@@ -70,7 +70,7 @@
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
         </svg>
-        <a href="/chat" class="text-xs">Home</a>
+        <a href="/messages" class="text-xs">Messages</a>
       </button>
       <button class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -87,11 +87,9 @@
     </div>
   </nav>
 <script src="/socket.io/socket.io.js"></script>
-<script src="http://localhost:5050/socket.io/socket.io.js"></script>
 <script>
   const socket = io("http://localhost:5050");
   const recomendations = document.getElementById("recomendations");
-
   
   document.addEventListener("DOMContentLoaded", () => {
     socket.emit("getRooms");
@@ -100,19 +98,27 @@
   socket.on("roomsList", (rooms) => {
     const container = document.getElementById("recomendations");
     container.innerHTML = "";
-
+    const backgrounds = ["study.jpg", "social.jpg"]
+    const randomIndex = Math.floor(Math.random() * backgrounds.length);
     rooms.forEach(room => {
       if (!room || !room.room_name) return; // <-- защита от null
-
+      const background = backgrounds[randomIndex];
+      // Создаем карточку комнаты
       const div = document.createElement("div");
       div.className = "w-full p-6 bg-white rounded-lg shadow mb-6 w-full max-w-3xl";
       div.style.width = "95%"; 
+      div.style.height = "auto";
+      div.style.fontSize = "1.1em";
       div.style.minWidth = "320px"; 
+      div.style.backgroundImage = "url('/content/images/" + background + "')";
+      div.style.backgroundSize = "cover";
+      div.style.backgroundPosition = "center";
       div.innerHTML = `
-        <h2 style="width:80%;" class="text-lg font-semibold text-gray-800">${room.room_name}</h2>
-        <p class="text-gray-600">Description: ${room.description || ""}</p>
-        <p class="text-gray-600">Language: ${room.language || ""}</p>
-        <p class="text-gray-600">Author: ${room.user_name || ""}</p>
+        <h2 style="width:80%;background-color:#2596be; opacity:0.9;" class="text-lg font-semibold text-gray-800">${room.room_name}</h2>
+        <p style="background-color:#2596be; opacity:0.9; color:gold;" class="text-gray-600">Description: ${room.description || ""}</p>
+        <p style="background-color:#2596be; opacity:0.9;" class="text-gray-600">Language: ${room.language || ""}</p>
+        <p align="right" style="background-color:#2596be; opacity:0.9; color:#FF2900; font-size:1.2em;">Author: ${room.user_name}</p>
+        
 
         <button class="join-room mt-2 px-3 py-1 bg-blue-500 text-white rounded hover:bg-blue-600">
           Join Room
@@ -136,6 +142,9 @@
 socket.on("main room error",(data)=>{
   alert(data);
 })
+socket.emit("createRoomSuccess", newRoom);
+socket.broadcast.emit("newRoom", newRoom);
+
 socket.on("main room added", (room_name) => {
   alert(`Room "${room_name}" added to your saved rooms!`);
 });
