--- a/content/home.html
+++ b/content/home.html
@@ -9,16 +9,37 @@
 </head>
 <body class="bg-gray-100 font-['Inter'] min-h-screen flex flex-col">
   <!-- Top Search Bar -->
-  <header class="fixed top-0 left-0 right-0 bg-white shadow-md z-10">
-    <div class="max-w-7xl mx-auto px-4 py-3" id="searchForm">
-      <div class="relative">
-        <h1 style="font-size: 1.5em;user-select: none;">MultiChat</h1>
-        <a href="join_mafia">Join Mafia</a>
-        <a href="guess_the_number">Guess the number</a>
-      </div>
-      <div id="searchResult"></div>
+  <header class="fixed top-0 left-0 right-0 bg-gradient-to-r from-indigo-700 via-purple-700 to-pink-600 shadow-lg z-10">
+    <div class="max-w-7xl mx-auto px-6 py-3 flex justify-between items-center">
+      <!-- Логотип -->
+      <h1 class="text-2xl font-bold text-white tracking-wide select-none">
+        MultiChat
+      </h1>
+
+      <!-- Навигация -->
+      <nav class="flex gap-6 items-center">
+        <a 
+          href="join_mafia" 
+          class="relative px-5 py-2 rounded-lg text-lg font-semibold text-gold-200 hover:text-yellow-300 transition shadow-md overflow-hidden"
+          style="color: gold;"
+        >
+          <!-- Фон с мафией -->
+          <span 
+            class="absolute inset-0 bg-[url('/content/images/mafia.png')] bg-cover bg-center opacity-50 hover:opacity-70 transition"
+          ></span>
+          <span class="relative z-10">🎭 Join Mafia</span>
+        </a>
+
+        <a 
+          href="guess_the_number" 
+          class="px-4 py-2 text-lg font-medium text-white hover:text-yellow-300 transition"
+        >
+          🔢 Guess the number
+        </a>
+      </nav>
     </div>
   </header>
+
 
   <!-- Main Content -->
   <div class="flex flex-1 pt-16 w-full mx-auto px-4">
@@ -60,25 +81,26 @@
   <!-- Mobile Bottom Navigation -->
   <nav class="lg:hidden fixed bottom-0 left-0 right-0 bg-white shadow-md">
     <div class="flex justify-around py-2">
-      <button class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
+      <button onclick="window.location.href = '/search'" class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
         </svg>
         <a href="/search" class="text-xs">Search</a>
       </button>
-      <button class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
+      <button onclick="window.location.href = '/create'" class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 4v16m8-8H4" />
         </svg>
-        <a href="/messages" class="text-xs">Messages</a>
+        <a href="/create" class="text-xs">Create room</a>
       </button>
-      <button class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
+
+      <button onclick="window.location.href = '/messages'" class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 20H5a2 2 0 01-2-2V6a2 2 0 012-2h10a2 2 0 012 2v1m2 13a2 2 0 01-2-2V7m6 13a2 2 0 01-2-2V7" />
         </svg>
         <a href="/messages" class="text-xs">Messages</a>
       </button>
-      <button class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
+      <button onclick="window.location.href = '/us_profile'" class="flex flex-col items-center text-gray-600 hover:text-indigo-600 transition">
         <svg class="h-6 w-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
         </svg>
@@ -93,6 +115,10 @@
   
   document.addEventListener("DOMContentLoaded", () => {
     socket.emit("getRooms");
+    socket.emit("check name");
+    socket.on("no name", () => {
+      window.location.href = "/";
+    });
   });
   
   socket.on("roomsList", (rooms) => {
