--- a/content/search.html
+++ b/content/search.html
@@ -114,9 +114,7 @@
   </style>
 </head>
 <body>
-  <header><a href="/chat" style="position: absolute;top:3%; left:3%; background-color: #00ffea; padding: 0.5rem 1rem; border-radius: 5px; text-decoration: none; color: #1e293b; font-weight: bold; box-shadow: 0 2px 8px rgba(0,0,0,0.2);">
-        Home
-      </a>Search</header>
+  <header>Search</header>
 
   <div class="search-box">
     <form id="searchForm" style="display: flex;">
