--- a/content/home.html
+++ b/content/home.html
@@ -110,7 +110,7 @@
   </nav>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io("http://localhost:5050");
+  const socket = io(window.location.origin);
   const recomendations = document.getElementById("recomendations");
   
   document.addEventListener("DOMContentLoaded", () => {
