--- a/content/forgot-password.html
+++ b/content/forgot-password.html
@@ -105,7 +105,7 @@
   </div>
 
   <script>
-    const socket = io("http://localhost:5050");
+    const socket = io({ auth: { token: localStorage.getItem("token") } });
 
     function validateEmail(email) {
       const re = /^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$/;
