--- a/content/auth.html
+++ b/content/auth.html
@@ -7,7 +7,8 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io(window.location.origin);
+    const socket = io({ auth: { token: localStorage.getItem("token") } });
+
 
     document.addEventListener("DOMContentLoaded", () => {
       // Проверка на наличие пользователя
