--- a/content/home.html
+++ b/content/home.html
@@ -110,7 +110,7 @@
   </nav>
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io(window.location.origin);
+  const socket = io({ auth: { token: localStorage.getItem("token") } });
   const recomendations = document.getElementById("recomendations");
   
   document.addEventListener("DOMContentLoaded", () => {
