--- a/content/new-password.html
+++ b/content/new-password.html
@@ -112,7 +112,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io("http://localhost:5050");
+    const socket = io({ auth: { token: localStorage.getItem("token") } });
 
     document.getElementById("new-password-form").addEventListener("submit", (event) => {
       event.preventDefault();
