--- a/content/user-profile.html
+++ b/content/user-profile.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="/socket.io/socket.io.js"></script>
 <script>
-  const socket = io();
+  const socket = io({ auth: { token: localStorage.getItem("token") } });
   const userFriends = [];
   const mainRooms = [];
   
